# gentoo-update-checker

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md  org.gentoo.UpdateChecker.desktop
src/: main.cpp  systemtraywidget.cpp  systemtraywidget.h  updatechecker.cpp  updatechecker.h
